[feat+fix] Complément sur le login/register + implémentation de l'affichage du profil et de sa modification